[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Door.gd" type="Script" id=1]
[ext_resource path="res://assets/Cenários/Objects/PortaIcon.png" type="Texture" id=2]
[ext_resource path="res://assets/Cenários/Objects/PortaIcon2.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "Idle",
"speed": 1.0
} ]

[sub_resource type="RectangleShape2D" id=1]

[node name="Door" type="Area2D"]
collision_mask = 2
script = ExtResource( 1 )

[node name="PortaIcon" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 2 )
animation = "Idle"
frame = 1
playing = true

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_Door_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Door_body_exited"]
